--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"npm i",
-    "run":"node server.js"
+    "start": "npm i",
+    "run": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
